base/solution0001/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: solution0001
  namespace: tenant-example
  labels:
    app: solution0001
spec:
  replicas: 1
  selector:
    matchLabels:
      app: solution0001
  template:
    metadata:
      labels:
        app: solution0001
    spec:
      containers:
      - name: solution0001
        image: 558232680640.dkr.ecr.us-east-1.amazonaws.com/example-repo:main-0
