base/solution0001/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: solution0001-service
  namespace: tenant-example
  labels:
    app: solution0001
spec:
 selector:
   app: solution0001
 type: ClusterIP  
 ports:
  - protocol: TCP
    port: 9091
    targetPort: 9091
